tests/ui/linkage-attr/linkage4.stderr
error[E0658]: the `linkage` attribute is experimental and not portable across platforms
  --> $DIR/linkage4.rs:1:1
   |
LL | #[linkage = "external"]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29603 <https://github.com/crablang/crablang/issues/29603> for more information
   = help: add `#![feature(linkage)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
